--- a/src/MainWindow.ui
+++ b/src/MainWindow.ui
@@ -150,7 +150,7 @@
         </widget>
        </item>
        <item>
-        <widget class="QGLView" name="qglview" native="true">
+        <widget class="View" name="qglview" native="true">
          <property name="sizePolicy">
           <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
            <horstretch>0</horstretch>
@@ -1383,7 +1383,7 @@
  </widget>
  <customwidgets>
   <customwidget>
-   <class>QGLView</class>
+   <class>View</class>
    <extends>QWidget</extends>
    <header>QGLView.h</header>
    <container>1</container>
